# mini-kodi

./: LICENSE  README-NUC.md  README.md
conf/: fstab-usb-mount.txt  grub-kodi-splash.cfg  lightdm-kodi.conf  polkit-kodi.pkla  udev-usb-automount.rules
conf/scripts/: kodi-update-library
conf/systemd/: radarr.service  sabnzbd-dafaults.init  (+1 more)
config-files/: fstab-addition  hardware.conf  irexec-root.service  lirc-module-rebuild  lircd.conf  lircrc.conf  radarr.service  sonarr.service  xbox-remote.conf
lirc-0.9.0/: .cvsignore  .gitignore  ANNOUNCE  Makefile.am  NEWS  autogen.sh  build-xbox.sh  configure.ac  configure.ac.orig  setup-functions.sh  setup.data  setup.sh
lirc-0.9.0/drivers/: Makefile.am  Makefile.common  kcompat.h
lirc-0.9.0/drivers/lirc_atiusb/: .cvsignore  lirc_atiusb.c
lirc-0.9.0/drivers/lirc_bt829/: .cvsignore  lirc_bt829.c
lirc-0.9.0/drivers/lirc_dev/: .cvsignore  lirc_dev.c  lirc_dev.h
lirc-0.9.0/drivers/lirc_gpio/: .cvsignore  lirc_gpio.c
lirc-0.9.0/drivers/lirc_i2c/: .cvsignore  lirc_i2c.c
lirc-0.9.0/drivers/lirc_igorplugusb/: .cvsignore  lirc_igorplugusb.c
lirc-0.9.0/drivers/lirc_imon/: .cvsignore  lirc_imon.c
lirc-0.9.0/drivers/lirc_parallel/: .cvsignore  lirc_parallel.c
lirc-0.9.0/drivers/lirc_sasem/: .cvsignore  lirc_sasem.c
lirc-0.9.0/drivers/lirc_serial/: .cvsignore  lirc_serial.c
lirc-0.9.0/drivers/lirc_sir/: .cvsignore  lirc_sir.c
lirc-0.9.0/drivers/lirc_ttusbir/: .cvsignore  lirc_ttusbir.c
lirc-0.9.0/drivers/lirc_wpc8769l/: .cvsignore  lirc_wpc8769l.c
lirc-0.9.0/drivers/lirc_xbox/: Makefile.am  lirc_xbox.c
(+156 files in other folders)
